--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.23.1",
+    "react-router-hash-link": "^2.4.3",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.4",
     "yup": "^1.4.0"
